# py-langid-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  predict.sh  pyproject.toml
app/: main.py
app/core/: config.py  dependencies.py  exceptions.py  handlers.py  logging.py
app/routers/: health.py  language.py
app/schemas/: health.py  language.py  responses.py
app/service/: model.py
docs/: architecture.md  error_handling_reference.md  errors.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  index.md
docs/daily_logs/: 2026-06-21.md  2026-06-23.md  2026-06-25.md  2026-06-26.md  2026-07-04.md
docs/learning/: covariance_contravariance_invariance.md  error_handling_reference.md  logging.md  python_type_hints.md
tests/: conftest.py  test_health.py  test_lifespan.py  test_not_found.py  test_prediction.py
