[project]
name = "py-langid-api"
version = "0.1.0"
description = "A lightweight REST API for language detection, built with FastAPI and Docker."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.2",
    "pydantic-settings>=2.14.1",
    "scikit-learn==1.6.0",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["."]
